2003-09-15  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* users-conf.in: added $gentoo_logindefs_defaults, whose default main
	  group is "users". Fixes bug #122163

2003-09-15  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* users-conf.in: added Mandrake 9.X support for the users tool
	* time-conf.in: added Mandrake 9.X support for the time tool
	* service.pl.in, services-conf.in: added Mandrake 9.X support for the
	  services tool
	* network.pl.in, network-conf.in: added Mandrake 9.X almost complete
	  support for the network tool, configuring a PPP interface seems 
	  to be curiously broken at least in mandrake 9.0, I need to find 
	  out what's the problem.

2003-09-13  Eduardo Garcia Cebollero <kiwnix@yahoo.es>

	* *.pl.in, *-conf.in, configure.in, Makefile.am, Makefile.in:
	  [build_system_switch] Update the sustitution system used in the
	  Makefiles for using Autoconf.
	* system-tools-backends.pc.in : Added file (independant info for
	  use if you want to know data about the backends)
	* autogen.sh: made it able to compile the backends independently of
	  the frontends

2003-09-13  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* users-conf.in (del_user): made it not to delete the deleted user's
	  home, it's a more safe default

2003-09-13  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot.pl.in (gst_boot_get_entry_parse_table): pass the correct
	  parameters to gst_boot_grub_parse_initrd (), fixes bug #121744

2003-08-30  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot-grub.pl.in (gst_boot_grub_linux2grub)
	(gst_boot_grub_grub2linux): added some rude guessing if
	the device doesn't exist in devices.map, anyways, this may still
	fail under certain circumstances, but this is unavoidable :-(

2003-08-25  Carlos Garnacho Parro  <garnacho@tuxerver.net>
 
        * Release 0.27.0

2003-08-25  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Makefile.am: fixed, now it passes distcheck
