@@ -1,3 +1,9 @@
+2003-10-08  Carlos Garnacho Parro  <garnacho@tuxerver.net>
+
+	* xml.pl.in: (gst_xml_read_stdin) improved xml reading
+	* general.pl.in: use autoflush for both STDERR and STDOUT, changed
+	  textdomain
+
 2003-09-15  Carlos Garnacho Parro  <garnacho@tuxerver.net>
 
 	* users-conf.in: added $gentoo_logindefs_defaults, whose default main
